--- a/main.tex
+++ b/main.tex
@@ -122,24 +122,17 @@ Given two line segments whose lengths are $a$ and $b$ respectively there
 is a real number $r$ such that $b=ra$.
 \end{lemma}
 
-% \begin{proof}
-% To prove it by contradiction try and assume that the statemenet is false,
-% proceed from there and at some point you will arrive to a contradiction.
-% \end{proof}
 
-% \begin{remark}
-% This statement is true, I guess.
-% \end{remark}
 
 
 
 \subsection{Code}
 
-% Code segments can be displayed inline using 10 pt.~Courier New (e.g., \lstinline|#define largerlimit 8000000|), or on display in the same font:
-% \begin{lstlisting}
-% if(blocknumber > 115000)
-% maxblocksize = largerlimit
-% \end{lstlisting}
+Code segments can be displayed inline using 10 pt.~Courier New (e.g., \lstinline|#define largerlimit 8000000|), or on display in the same font:
+\begin{lstlisting}
+if(blocknumber > 115000)
+maxblocksize = largerlimit
+\end{lstlisting}
 For displayed code, the first line should be indented by 1.2cm (twice the standard indent) with additional tabs at multiples of 0.6 cm.
 
 \subsection{Endnotes}
