--- a/main.tex
+++ b/main.tex
@@ -143,6 +143,8 @@ Endnotes are denoted with a superscript Arabic numeral and ordered sequentially.
 
 For papers that do not follow a conventional structure, synthesize and summarize the main results of the paper.  This section is also an appropriate place to clarify the limitations of the work, as well as to describe new research questions that arose.  The conclusion section for papers that follow a conventional structure (i.e., Methods, Results, Discussion) may be very short because the synthesis of the results usually occurs in the Discussion section.  The Conclusion and the Introduction should be the two sections of your paper most accessible to an interdisciplinary readership.
 
+\ledgernotes
+
 \section{Acknowledgement}
 
 Acknowledge people who helped carry out the research or prepare the manuscript but whose contribution did not warrant authorship.  List funders and other sources of financial support at the end of this section.
@@ -155,12 +157,13 @@ State the contribution made by each author.  Refer to authors using their initia
 
 State any potential conflict of interest here, again referring to authors using their initials.  Although assessing whether a conflict of interest exists can be difficult, as a guideline consider whether it would be embarrassing should the potential conflict become publicly known.  This section may be omitted if no conflict of interest exists.
 
+\theendnotes
+
 \appendix
 
 \section{Calculations}
 
 Relegate to an appendix material that would distract from the flow of the article, but that is required to rigorously prove claims made or concepts introduced in the paper’s body.
 
-\theendnotes
 
 \end{document}
